minor dark mode fixes

--- a/resources/hacksburg.css
+++ b/resources/hacksburg.css
@@ -4,7 +4,7 @@
 	--tomato: tomato;
 	--tomato_soup: #ff5537;
 	--white: #ffffff;
-	--offwhite: #c8c8c8;
+	--offwhite: #d5d5d5;
 	--black: #000000;
 	--offblack: #151920;
 }
@@ -722,7 +722,7 @@ a {
 		box-shadow: 0px 7px 12px rgba(0, 0, 0, 0.47);
 	}
 	.post_map {
-		filter:  invert(95%) sepia(100%) hue-rotate(75deg) saturate(350%);
+		filter: invert(100%) grayscale(100%)  opacity(35%) brightness();
 	}
 	.button {
 		--darker_green: #00a000;
@@ -757,7 +757,7 @@ a {
 		background-color: var(--offwhite);
 	}
 	.post_image {
-		filter: brightness(70%);
+		filter: brightness(75%);
 	}
 	#donation_jar {
 		filter: brightness(75%);
